# llx

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  README.md
homebrew-tap/Formula/: llx.rb
scripts/: create_release.sh
src/llx/: daemon_manager.cpp  daemon_manager.h  llx.cpp  llx.h  main.cpp
src/llxd/: llxd.cpp  llxd.h  logging.h  main.cpp  prompts.h  protocol.h
